codama-syn-helpers/tests-macros/tests/as_verbatim/from_expr.fail.stderr
error: expected verbatim
 --> tests/as_verbatim/from_expr.fail.rs:3:15
  |
3 | #[as_verbatim("hello")]
  |               ^^^^^^^
