codama-syn-helpers/tests-macros/tests/as_verbatim/from_expr.fail.rs
use codama_syn_helpers_test_macros::as_verbatim;

#[as_verbatim("hello")]
pub struct Test;

fn main() {}
